<resources>
    <string name="app_name">HIKONNECT</string>
    <string name="hikonnect_server_ip">http://hikonnect.ga</string>
    <string name="laravel_local_server_ip">http://172.26.2.233:8000</string>
    <string name="node_local_server_ip">http://172.26.2.233:3000</string>
    <string name="title_activity_maps">HIKONNECT</string>
    <string name="id_hint">ID</string>
    <string name="password_hint">PASSWORD</string>
    <string name="loginBtn">ログイン</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="enter_group">グループ参加</string>
    <string name="cancel_group">グループ脱退</string>
    <string name="delete_group">グループ削除</string>
    <string name="sign_in">ログイン</string>
    <string name="sign_up">新規取得</string>
    <string name="log_out">ログアウト</string>
    <string name="groupName">グループ名</string>
    <string name="title">題名</string>
    <string name="content">内容</string>
    <string name="min">最小募集人員</string>
    <string name="max">最大募集人員</string>
    <string name="makeGroup">新規グループ作成</string>
    <string name="makeNotice">お知らせ作成</string>
    <string name="groups">募集中のグループ</string>
    <string name="nav_my_page">マイページ</string>
    <string name="nav_my_groups">参加しているグループ</string>
    <string name="nav_my_records">ハイキングレコード</string>
    <string name="nav_my_profile">プロフィール</string>
    <string name="user_id"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_info_res_was_empty">現在登山しているメンバーがないです。</string>
    <string name="user_info_search_hint">&#160;&#160;&#160;&#160;&#160;ユーザーのIDを入力してください.</string>

    <!-- 그룹 리스트 검색 선택 -->
    <string-array name="group_search_selector">
        <item>グループ名</item>
        <item>リーダー</item>
    </string-array>

</resources>
