<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/groups"
            android:icon="@drawable/ic_place"
            android:title="@string/groups" />
    </group>

    <item android:title="@string/nav_my_page">
        <menu>
            <item
                android:icon="@drawable/ic_emoticon"
                android:id="@+id/my_groups"
                android:title="@string/nav_my_groups" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:id="@+id/my_profile"
                android:title="@string/nav_my_profile" />
            <!--<item
                android:icon="@drawable/ic_emoticon"
                android:id="@+id/my_profile"
                android:title="My Profile"/>-->
            <item
                android:icon="@drawable/ic_emoticon"
                android:id="@+id/log_out"
                android:title="@string/log_out"/>
        </menu>
    </item>
</menu>
