<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makeGroup"
        android:textSize="40dp"
        android:textColor="@color/grey_700"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupName"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/GroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="그룹명을 입력하세요*"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/GroupContetns"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="내용을 입력하세요*"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:cursorVisible="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/minNum"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="최소 모집 인원*"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/maxNum"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="최대 모집 인원*"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="230dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="확인"
            android:textColor="@color/white"
            android:background="@drawable/group_making_check_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="취소"
            android:textColor="@color/blue_700"
            android:background="@drawable/group_making_cancel_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>