<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makeNotice"
        android:textSize="40dp"
        android:textColor="@color/grey_700"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/noticeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="제목을 입력하세요*"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/GroupContetns"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="내용을 입력하세요*"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:cursorVisible="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="첨부파일"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/fileFindBtn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="파일찾기"
                android:textSize="13dp"
                android:textColor="@color/white"
                android:background="@drawable/notice_making_file_upload_btn"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/NoticeContetns"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="첨부파일명*"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:cursorVisible="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="확인"
            android:textColor="@color/white"
            android:background="@drawable/group_making_check_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="취소"
            android:textColor="@color/blue_700"
            android:background="@drawable/group_making_cancel_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>